--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -1,15 +1,10 @@
 html, body {
   background: var(--tertiary);
   box-sizing: border-box;
-  height: 100%;
+  // height: 100%;
   margin: 0;
   padding: 0;
   font-family: century-gothic,sans-serif;
-  width: 100%;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+  // width: 100%;
+  overflow-x: hidden;
 }
